# verifi.ai-backend

./: .gitignore  database.py  documentation.md  main.py  models.py  pyproject.toml  requirements.txt  rule_engine.py  rule_engine_ref.py  schemas.py  tester.ipynb
tests/: test_api.py
