[project]
name = "verifi-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "alembic==1.13.1",
    "fastapi[standard]>=0.115.6",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.1",
    "pytest>=8.3.5",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.27",
    "uvicorn==0.27.1",
]
